# bet-maker

./: .env.example  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/clients/: event_client_abstract.py  event_client_redis.py  event_client_stab.py
app/config/: config.py  dependencies.py
app/core/: dependencies.py  exceptions.py
app/core/schemas/: bet.py  event.py
app/infrastructure/: redis_stream_consumer.py
app/infrastructure/db/: database.py
app/infrastructure/db/models/: bets.py
app/infrastructure/db/redis/: redis_pool.py
app/repos/: bet_repo_abstract.py  bet_repo_db.py  bet_repo_in_memory.py
app/routers/: bets_router.py  events_router.py
app/routers/dto/: bet.py
app/services/: bet_service.py  event_service.py
tests/e2e/: test_bet_service.py
tests/integrations/: test_bet_service.py  test_event_client_redis.py  test_redis_stream_consumer.py
tests/units/: test_bet_service.py  test_event_service.py
tests/units/mocks/: bet_repo_in_memory.py  event_client_mock.py
