[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["ekutia <ekutia@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.112.1"}
fastapi-cli = "^0.0.5"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
testcontainers = "^4.8.0"
requests = "^2.32.3"
pytest-timeout = "^2.3.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
